--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,5 @@
 * {
+    color: white;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -112,6 +113,72 @@ nav img {
     background:#0080ff;
     transition: 0.8s;
 }
+.booking-form-box{
+    max-width: 400px;
+    border:1px solid #ced4da;
+    margin:10% auto 0;
+}
+.booking-form {
+    padding: 0 20px 20px;
+    color: white;
+}
+.booking-form label{
+    margin-bottom: 5px;
+    margin-top: 10px;
+    font-size: 12px;
+    color: #ffffff;
+}
+.input::placeholder{color:#ffffff!important;
+}
+.input-grp{
+    width: 151px;
+    display: inline-block;
+    color: white;
+}
+.form control{
+    font-size: 12px!important;
+    border-radius: 0!important;
+    color: white!important;
+    background: transparent!important;
+    box-shadow: none!important;
+}
+.select-date::-webkit-inner-spin-button,
+.select-date::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0px;
+}
+.select-date::-webkit-calendar-picker-indicator {
+    background: transparent!important;
+
+}
+.custom-select{
+    color:#ffffff;
+
+    font-size: 12px!important;
+    border: 1px solid #ced4da!important;
+    box-shadow: none!important;
+    border-radius: 0!important;
+    background: transparent!important;
+}
+.custom-select option{
+    color:#333;
+}
+.flight{
+    width:100px!important;
+    padding: 9px!important;
+    border: 1px solid #ced4da!important;
+    box-shadow: none!important;
+    border-radius: 0!important;
+    background: transparent!important;
+}
+.flight:hover {
+    background: #ffffff!important;
+    color:#000!important;
+    transition: 0.5s;
+}
+
+
+
 
 nav .fa {
     display: none;
@@ -179,7 +246,7 @@ footer {
     color: #ffffff;
     margin: 20px 0 12px;
     padding: auto;
-    font-size: 2opx;
+    font-size: 20px;
 }
 
 .footer-distributed .footer-links a {
@@ -305,6 +372,9 @@ footer {
     margin-bottom: 5px;
 }
 
+
+
+
 @media (max-width: 880px) {
     .footer-distributed {
         font: bold 14px sans-serif;
@@ -317,11 +387,10 @@ footer {
         margin-bottom: 40px;
         text-align: center;
     }
-    .footer-distributed .footer-center i {
-        margin-left: 0;
-    }
-    .main {
-        line-height: normal;
-        font-size: auto;
-    }
+    .footer-distributed .footer-center i
+{
+    box-sizing: border-box;
 }
+{
+}
+    }
