--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,5 @@
 * {
+
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -125,7 +126,7 @@ nav img {
     margin-bottom: 5px;
     margin-top: 10px;
     font-size: 12px;
-    color: #ffffff;
+    color: white;
 }
 .input::placeholder{color:#ffffff!important;
 }
