--- a/Style.css
+++ b/Style.css
@@ -117,10 +117,12 @@ nav img {
     max-width: 400px;
     border:1px solid #ced4da;
     margin:10% auto 0;
+    color:white;
 }
 .booking-form {
     padding: 0 20px 20px;
     color: white;
+    text-align: center;
 }
 .booking-form label{
     margin-bottom: 5px;
