--- a/Style.css
+++ b/Style.css
@@ -117,6 +117,12 @@ nav .fa {
     display: none;
 }
 
+.contain{
+ padding: 50px;
+ margin-left: 50px;
+    margin-right:50px;
+    letter-spacing: 2px;
+}
 
 
 
