--- a/Style.css
+++ b/Style.css
@@ -1,333 +1,148 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-.header {
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.455), rgba(0, 0, 0, 0.500)), url(images/background.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
-
-nav {
-    display: flex;
-    padding: 1% 2%;
-    justify-content: space-between;
-    align-items: center;
-    overflow: auto;
-
-}
-
-nav img {
-    width: 220px;
-    margin-top: 10px;
-}
-
-.nav-links {
-    flex: 1;
-    text-align: right;
-
-}
-
-.nav-links ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 2%;
-
-
-}
-
-.nav-links ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
-}
-
-
-
-.nav-links ul li a:hover {
-
-    font-size: 20px;
-    color: #0080ff;
-
-
-}
-
-
-@media screen and (max-width: 500px) {
-    .nav-links a {
-        float: none;
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-}
-.text-box {
-    width: auto;
-    color: #fff;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    letter-spacing: normal;
-    line-height: normal;
-}
-
-.text-box h1 {
-    font-size: 50px;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    letter-spacing: 0px;
-}
-
-.text-box p {
-    margin: 15px 0 35px;
-    font-size: 20px;
-    color: white;
-    line-height: normal;
-}
-
-.button {
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    border: 2px solid #fff;
-    padding: 10px 20px;
-    font-size: 20px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-}
-
-.button:hover {
-    border: 2px solid #fff;
-    background:#0080ff;
-    transition: 0.8s;
-}
-
-nav .fa {
-    display: none;
-}
-
-.contain{
- padding: 50px;
- margin-left: 50px;
-    margin-right:50px;
-    letter-spacing: 2px;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Payment Details</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@700&family=Supermercado+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" >
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+</head>
+<body>
+<!-- Nav bar -->
+<section class="header">
+  <nav>
+    <a href="index.html"><img src="images/logo.png" alt=""></a>
+    <div class="nav-links" id="navLinks">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact us.html">Contact us</a></li>
+        <li><a href="#">Log in</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="booking-form-box">
+    <p>Traveller Details</p>
+    <div class="booking-form">
+      <label>Name</label>
+      <input type="text" class="form control">
+      <br>
+        <div class="booking-form">
+          <label>Date of birth</label>
+          <input type="text" class="form control">
+        </div>
+      <div class="booking-form">
+        <label>Passport No.</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+      <div class="booking-form">
+        <label>Expire Date</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+      <div class="booking-form">
+        <label>mobile number</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+      <div class="booking-form">
+        <label>Email address</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
 
 
 
-/* footer area */
 
-footer {
-    position: relative;
-    bottom: 0;
-}
+    </div>
+    <P>Card Details</P>
+    <div class="booking-form">
+      <lable>Card number</lable>
+      <input type="text" class="form control" >
+      <br>
+    </div>
+    <div class="booking-form">
+      <lable>CCV</lable>
+      <input type="text" class="form control">
+    </div>
+    <div class="booking-form">
+      <lable>Expire Date</lable>
+      <input type="text" class="form control">
+    </div>
 
-.footer-links,.footer-company-name {
-    padding-left: 6px;
-}
+  <br>
+  <div class="input-grp">
+    <button type="button" class="btn btn-primary flight">Confirm</button>
+  </div>
 
-.footer-left h3 img {
-    width: 170px;
-    display: flex;
-    padding: 0%;
-    margin: 0%;
 
-}
+  </div>
+  <br>
+  <!-- footer area -->
 
-.footer-distributed {
-    top: auto;
-    position: relative;
-    background-color: #292c2f;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: 16px sans-serif;
-    padding: 55px 50px;
-    margin-top: auto;
-}
+  <footer class="footer-distributed">
 
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right {
-    display: inline-block;
-    vertical-align: top;
-    font-size: 20px;
-    line-height: normal;
-}
+    <div class="footer-left">
 
-.footer-distributed .footer-left {
-    width: 40%;
-}
+      <h3>
+        <a href="index.html"><img src="images/logo.png" alt=""></a>
+      </h3>
 
-.footer-distributed h3 {
-    color: #ffffff;
-    font: normal 36px 'Cookie', cursive;
-    margin: 0;
-}
+      <p class="footer-links">
+        <a href="#">Home</a> ·
+        <a href="#">About</a> ·
+        <a href="#">Contact</a> ·
+        <a href="#">Log in</a> ·
 
-.footer-distributed h3 span {
-    color: #5383d3;
-}
+      </p>
 
-.footer-distributed .footer-links {
-    color: #ffffff;
-    margin: 20px 0 12px;
-    padding: auto;
-    font-size: 2opx;
-}
+      <p class="footer-company-name">Phoenix airline &copy; 2022</p>
+    </div>
 
-.footer-distributed .footer-links a {
-    display: inline-block;
-    line-height: 1.8;
-    text-decoration: none;
-    color: inherit;
-}
+    <div class="footer-center">
 
-.footer-distributed .footer-company-name {
-    color: #8f9296;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-}
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p>1st Street, Colombo, <br> Sri Lanka</p>
+      </div>
 
-.footer-distributed .footer-center {
-    width: 35%;
-}
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>(+94) 11 22 22 500</p>
+      </div>
 
-.footer-distributed .footer-center i {
-    background-color: #33383b;
-    color: #ffffff;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 20px 15px;
-    vertical-align: middle;
-}
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="mailto:support@company.com">phoenixairline@gmail.com</a></p>
+      </div>
 
-.footer-distributed .footer-center i.fa-envelope {
-    font-size: 17px;
-    line-height: 38px;
-}
+    </div>
 
-.footer-distributed .footer-center p {
-    display: inline-block;
-    color: #ffffff;
-    vertical-align: middle;
-    margin: 0;
-}
+    <div class="footer-right">
 
-.footer-distributed .footer-center p span {
-    display: block;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 2;
-}
+      <p class="footer-company-about">
+        <span>About the Organization </span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam deserunt harum nemo quibusdam velit quia adipisci corporis a nostrum illum.</p>
 
-.footer-distributed .footer-center p a {
-    color: #5383d3;
-    text-decoration: none;
-;
-}
+      <div class="footer-icons">
 
-.footer-distributed .footer-right {
-    width: 20%;
-}
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
 
-.footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #92999f;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-}
+      </div>
+    </div>
+  </footer>
 
-.footer-distributed .footer-company-about span {
-    display: block;
-    color: #ffffff;
-    font-size: 14px;
-    line-height: 2;
-}
-
-.footer-distributed .footer-center p a {
-    color: #5383d3;
-    text-decoration: none;
-}
-
-.footer-distributed .footer-right {
-    width: 20%;
-
-}
-.footer-right {
-    margin: 10px;
-
-}
-.footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #92999f;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-}
-
-.footer-distributed .footer-company-about span {
-    display: block;
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.footer-distributed .footer-icons {
-    margin-top: 25px;
-}
-
-.footer-distributed .footer-icons a {
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background-color: #33383b;
-    border-radius: 2px;
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 35px;
-    margin-right: 3px;
-    margin-bottom: 5px;
-}
-
-@media (max-width: 880px) {
-    .footer-distributed {
-        font: bold 14px sans-serif;
-    }
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right {
-        display: block;
-        width: 100%;
-        margin-bottom: 40px;
-        text-align: center;
-    }
-    .footer-distributed .footer-center i {
-        margin-left: 0;
-    }
-    .main {
-        line-height: normal;
-        font-size: auto;
-    }
-}
+</body>
+</html>
