--- a/about.css
+++ b/about.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: serif;
+    font-family: sans-serif;
 }
 .about{
     width: 100%;
@@ -47,13 +47,13 @@
 }
 .content h2{
     font-size: 28px;
-    font-family: serif;
+    font-family: sans-serif;
     color: #e84393;
     margin-top: 25px;
 }
 .content p{
     font-size: 20px;
-    font-family: serif;
+    font-family: sans-serif;
     font-weight: 500;
     color: black;
     margin-top: 10px;
@@ -106,7 +106,7 @@
     transition: 0.5s ease;
 }
 .cards-section h2{
-    font-family: serif;
+    font-family: sans-serif;
     font-weight: bold;
     color:#e84393;
     margin-bottom: 15px;
